Update file generation tests