@@ -20,12 +20,12 @@ import java.nio.charset.Charset;
 import java.util.Map;
 import java.util.Objects;
 
-import static uk.gov.hmcts.reform.pip.model.publication.ListType.UT_IAC_JR_LEEDS_DAILY_HEARING_LIST;
+import static uk.gov.hmcts.reform.pip.model.publication.ListType.UT_IAC_JR_LONDON_DAILY_HEARING_LIST;
 
 
 @ActiveProfiles("test")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
+class UtIacJudicialReviewLondonDailyHearingListFileConverterTest {
 
     private static final String CONTENT_DATE = "12 December 2024";
     private static final String LAST_RECEIVED_DATE = "2025-01-20T09:30:00Z";
@@ -39,16 +39,13 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
     private static final String ENGLISH = "ENGLISH";
     private static final String WELSH = "WELSH";
 
-    private static final String VENUE = "Venue";
+    private static final String SUBSTANTIVE = "Substantive";
     private static final String VENUE_WELSH = "Lleoliad";
     private static final String JUDGES = "Judge(s)";
     private static final String JUDGES_WELSH = "Barnwr/Barnwyr";
     private static final String HEARING_TIME = "Hearing time";
     private static final String HEARING_TIME_WELSH = "Amser y gwrandawiad";
     private static final String CASE_REFERENCE_NUMBER = "Case reference number";
-    private static final String CASE_REFERENCE_NUMBER_WELSH = "Cyfeirnod yr achos";
-    private static final String CASE_TITLE = "Case title";
-    private static final String CASE_TITLE_WELSH = "Deitl yr achos";
     private static final String HEARING_TYPE = "Hearing type";
     private static final String HEARING_TYPE_WELSH = "Math o wrandawiad";
     private static final String ADDITIONAL_INFORMATION = "Additional information";
@@ -61,7 +58,6 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
     private static final String OBSERVE_HEARING_WELSH = "Arsylwi gwrandawiad llys neu dribiwnlys fel newyddiadurwr, "
         + "ymchwilydd neu aelod o'r cyhoedd";
     private static final String HEARING_VENUE = "This is a venue name";
-    private static final String HEARING_ADDITIONAL_INFORMATION = "This is additional information";
 
     private static final String HEADER_ELEMENT = "page-heading";
     private static final String LIST_DATE_ELEMENT = "list-date";
@@ -86,7 +82,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
     @BeforeAll
     void setup() throws IOException {
         try (InputStream inputStream = getClass()
-            .getResourceAsStream("/mocks/non-strategic/utIacJudicialReviewLeedsDailyHearingList.json")) {
+            .getResourceAsStream("/mocks/non-strategic/utIacJudicialReviewLondonDailyHearingList.json")) {
             String inputRaw = IOUtils.toString(inputStream, Charset.defaultCharset());
             utIacJudicialReviewInputJson = new ObjectMapper().readTree(inputRaw);
         }
@@ -97,7 +93,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
         Map<String, Object> languageResource;
         try (InputStream languageFile = Thread.currentThread()
             .getContextClassLoader()
-            .getResourceAsStream("templates/languages/en/non-strategic/utIacJrLeedsDailyHearingList.json")) {
+            .getResourceAsStream("templates/languages/en/non-strategic/utIacJrLondonDailyHearingList.json")) {
             languageResource = new ObjectMapper().readValue(
                 Objects.requireNonNull(languageFile).readAllBytes(), new TypeReference<>() {
                 });
@@ -106,7 +102,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
         Map<String, String> metadata = Map.of(CONTENT_DATE_METADATA, CONTENT_DATE,
                                               PROVENANCE_METADATA, PROVENANCE,
                                               LANGUAGE_METADATA, ENGLISH,
-                                              LIST_TYPE_METADATA, UT_IAC_JR_LEEDS_DAILY_HEARING_LIST.name(),
+                                              LIST_TYPE_METADATA, UT_IAC_JR_LONDON_DAILY_HEARING_LIST.name(),
                                               LAST_RECEIVED_DATE_METADATA, LAST_RECEIVED_DATE
         );
 
@@ -117,11 +113,11 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
 
         softly.assertThat(document.title())
             .as(TITLE_MESSAGE)
-            .isEqualTo("Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Leeds Daily Hearing List");
+            .isEqualTo("Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: London Daily Hearing List");
 
         softly.assertThat(document.getElementById(HEADER_ELEMENT).text())
             .as(HEADER_MESSAGE)
-            .isEqualTo("Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Leeds Daily Hearing List");
+            .isEqualTo("Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: London Daily Hearing List");
 
         softly.assertThat(document.getElementById(LIST_DATE_ELEMENT).text())
             .as(LIST_DATE_MESSAGE)
@@ -131,7 +127,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -146,37 +142,40 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(7)
+            .hasSize(8)
             .extracting(Element::text)
             .containsExactly(
-                VENUE,
-                JUDGES,
                 HEARING_TIME,
+                "Applicant",
+                "Representative",
                 CASE_REFERENCE_NUMBER,
-                CASE_TITLE,
+                JUDGES,
                 HEARING_TYPE,
+                "Location",
                 ADDITIONAL_INFORMATION
             );
 
         softly.assertThat(document.getElementsByTag("td"))
             .as(TABLE_CONTENT_MESSAGE)
-            .hasSize(14)
+            .hasSize(16)
             .extracting(Element::text)
             .containsExactly(
-                HEARING_VENUE,
-                "Judge A",
                 "10:30am",
+                "Applicant A",
+                "Rep A",
                 "1234",
-                "Case A",
-                "Hearing type A",
-                HEARING_ADDITIONAL_INFORMATION,
+                "Judge A",
+                SUBSTANTIVE,
                 HEARING_VENUE,
-                "Judge B",
+                "This is additional information",
                 "11am",
-                "5678",
-                "Case B",
-                "Hearing type B",
-                HEARING_ADDITIONAL_INFORMATION
+                "Applicant B",
+                "Rep B",
+                "1235",
+                "Judge B",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is another additional information"
             );
 
         softly.assertAll();
@@ -187,7 +186,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
         Map<String, Object> languageResource;
         try (InputStream languageFile = Thread.currentThread()
             .getContextClassLoader()
-            .getResourceAsStream("templates/languages/cy/non-strategic/utIacJrLeedsDailyHearingList.json")) {
+            .getResourceAsStream("templates/languages/cy/non-strategic/utIacJrLondonDailyHearingList.json")) {
             languageResource = new ObjectMapper().readValue(
                 Objects.requireNonNull(languageFile).readAllBytes(), new TypeReference<>() {
                 });
@@ -196,7 +195,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
         Map<String, String> metadata = Map.of(CONTENT_DATE_METADATA, CONTENT_DATE,
                                               PROVENANCE_METADATA, PROVENANCE,
                                               LANGUAGE_METADATA, WELSH,
-                                              LIST_TYPE_METADATA, UT_IAC_JR_LEEDS_DAILY_HEARING_LIST.name(),
+                                              LIST_TYPE_METADATA, UT_IAC_JR_LONDON_DAILY_HEARING_LIST.name(),
                                               LAST_RECEIVED_DATE_METADATA, LAST_RECEIVED_DATE
         );
 
@@ -208,12 +207,12 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
         softly.assertThat(document.title())
             .as(TITLE_MESSAGE)
             .isEqualTo("Uwch Dribiwnlys (Mewnfudo a Lloches) - "
-                   + "Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Leeds");
+                   + "Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Llundain");
 
         softly.assertThat(document.getElementById(HEADER_ELEMENT).text())
             .as(HEADER_MESSAGE)
             .isEqualTo("Uwch Dribiwnlys (Mewnfudo a Lloches) - "
-                   + "Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Leeds");
+                   + "Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Llundain");
 
         softly.assertThat(document.getElementById(LIST_DATE_ELEMENT).text())
             .as(LIST_DATE_MESSAGE)
@@ -223,7 +222,7 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -239,37 +238,41 @@ class UtIacJudicialReviewLeedsDailyHearingListFileConverterTest {
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(7)
+            .hasSize(8)
             .extracting(Element::text)
             .containsExactly(
-                VENUE_WELSH,
-                JUDGES_WELSH,
                 HEARING_TIME_WELSH,
-                CASE_REFERENCE_NUMBER_WELSH,
-                CASE_TITLE_WELSH,
+                "Ymgeisydd",
+                "Cynrychiolir gan",
+                "Cyfeirnod yr achos",
+                JUDGES_WELSH,
                 HEARING_TYPE_WELSH,
+                VENUE_WELSH,
                 ADDITIONAL_INFORMATION_WELSH
             );
 
         softly.assertThat(document.getElementsByTag("td"))
             .as(TABLE_CONTENT_MESSAGE)
-            .hasSize(14)
+            .hasSize(16)
             .extracting(Element::text)
             .containsExactly(
-                HEARING_VENUE,
-                "Judge A",
                 "10:30am",
+                "Applicant A",
+                "Rep A",
                 "1234",
-                "Case A",
-                "Hearing type A",
-                HEARING_ADDITIONAL_INFORMATION,
+                "Judge A",
+                SUBSTANTIVE,
                 HEARING_VENUE,
-                "Judge B",
+                "This is additional information",
                 "11am",
-                "5678",
-                "Case B",
-                "Hearing type B",
-                HEARING_ADDITIONAL_INFORMATION
+                "Applicant B",
+                "Rep B",
+                "1235",
+                "Judge B",
+                SUBSTANTIVE,
+                HEARING_VENUE,
+                "This is another additional information"
+
             );
 
         softly.assertAll();
